# code-morphing

./: .gitignore  CMakeLists.txt  Makefile  Makefile.common  Makefile.config  Makefile.config.in  README.org
autoconf/: configure.ac
include/cmp/: AllPasses.h  AlternativesNumberVector.h  CodeMorphing.h  DeclareRandomizeFunction.h  InstructionAlternativeUtils.h  InstructionAlternatives.h
lib/: CMakeLists.txt  Makefile
lib/CodeMorphing/: AlternativesNumberVector.cpp  CMakeLists.txt  CodeMorphing.cpp  DeclareRandomizeFunction.cpp  InstructionAlternativeUtils.cpp  InstructionAlternatives.cpp  Makefile
test/: Makefile  Makefile.tests  lit.cfg  lit.site.cfg.in  site.exp.in
test/cmp/: xor.ll
tools/: CMakeLists.txt  Makefile
tools/cmp/: CMakeLists.txt  ForceLinking.cpp  Makefile
